# sensible-env-logger

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/: ISSUE_TEMPLATE.md
.github/workflows/: publish.yml
examples/: README.md  log.rs  log_timed.rs  log_timed_local.rs  log_timed_local_iso.rs  log_timed_short.rs  my_example.rs  with_builder.rs  with_safe_init.rs  with_try_init.rs
examples/my_sample_crate/: Cargo.toml
src/: lib.rs
